Get the API key from variable passed in.

--- a/templates/map.html
+++ b/templates/map.html
@@ -30,7 +30,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqw15EBB-oTZ9wi29EK4ZKml9ZzYpdtXc&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&callback=initMap">
     </script>
 
 </body>
