--- a/templates/map.html
+++ b/templates/map.html
@@ -2,12 +2,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-	#map {
-        height: 500px;
-        width: 500px;
-	}
-</style>
+    <title>ATM Map</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+
 </head>
 
 
